--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <title>Vingardium-Levieosa</title>
+
+    <!-- Bootstrap Lux Online (integrate when done, using local till then)
+    <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css"> 
+    -->
+
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
+    <nav class=""></nav>
     <h1>Hello World!</h1>
+    
+
     <!-- All of the Node.js APIs are available in this renderer process. -->
     We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
-
+    
     <script>
       // You can also require other files to run in this process
       require('./renderer.js')
