--- a/index.html
+++ b/index.html
@@ -4,15 +4,33 @@
     <meta charset="UTF-8">
     <title>Vingardium-Levieosa</title>
 
-    <!-- Bootstrap Lux Online (integrate when done, using local till then)
+    <!-- Bootstrap Lux Online
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css"> 
     -->
+    <link rel="stylesheet"  type="css" href="https://bootswatch.com/4/lux/bootstrap.min.css">
     <link rel="stylesheet" type="css" href="project_main.css">
     <link rel="javascript" type="javascript" href="project_main.js">
   </head>
   <body>
-    
- 
+    <nav id="mainNav" class="row" style="background:lightcyan;">
+      <div class="col-md-3 col-3 col-lg-3 col-sm-3"> 
+        <ul class="list list-unstyled">
+          <li class=""><a class="btn-link" href="#">deskHome</a></li>
+          <li class=""><a href="#">sleepMode</a></li> <!--deskSleep voice command: "desk sleep"-->
+          <li class=""><a href="#">ironmanBeta</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <div id="bootMessage" class=""> <!--first greeting after bootup. dismiss self-->
+      <h2 id="greetingMessage">Welcome back, Tanishq</h2>
+    </div>
+
+    <div class="col col-8 btn-success float-right align-bottom">
+      <p class="align-bottom">hello world</p>
+    </div>
+
+    <div style="height:150px;"></div>
 
     <script>
       // You can also require other files to run in this process
