old structure (only for webspace developement till new structure becomes relevant)

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!-- Bootstrap Lux Online
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css"> 
     -->
-    <link rel="stylesheet"  type="css" href="https://bootswatch.com/4/lux/bootstrap.min.css">
-    <link rel="stylesheet" type="css" href="project_main.css">
-    <link rel="javascript" type="javascript" href="project_main.js">
+    <link rel="stylesheet"  type="css" href="CSS/bootstrap_main.css">
+    <link rel="stylesheet" type="css" href="css/project_main.css">
+    <link rel="javascript" type="javascript" href="js/project_main.js">
   </head>
   <body>
     <nav id="mainNav" class="row" style="background:lightcyan;">
@@ -34,7 +34,7 @@
 
     <script>
       // You can also require other files to run in this process
-      require('./renderer.js')
+      require('./js/renderer.js')
     </script>
   </body>
 </html>
